# podcast_transformer

./: .gitignore  Dockerfile  README.md  README.zh.md  pyproject.toml  requirements.txt  run_example.sh  setup_and_run.sh
any2summary/: __init__.py  cli.py
podcast_transformer/: __init__.py  cli.py
prompts/: article_summary_prompt.txt  summary_prompt.txt
test/: test_cli.py  test_cli_article.py  test_cli_audio_conversion.py  test_cli_audio_split.py  test_cli_azure_chunking.py  test_cli_diarization.py  test_cli_download_audio.py  test_cli_summary.py  test_cli_version.py
