[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any2summary"
version = "0.0.1"
description = "any2summary is a command-line toolkit that handles the entire pipeline for podcasts, videos, and long-form articles—download, transcription, optional Azure speaker diarization, and Markdown summarization—directly on your local machine. "
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lee" }]
license = { text = "Proprietary" }
dependencies = [
    "openai>=1.30.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.3.10",
    "httpx[socks]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
any2summary = "any2summary.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["any2summary*"]
